--- a/fixed.css
+++ b/fixed.css
@@ -103,3 +103,9 @@ th {
   display: block;
   margin: 10px auto;
 }
+td {
+  vertical-align: middle !important;
+}
+#myTable {
+  animation: fadein ease 1s;
+}
